# neko

./: Cargo.toml  LICENSE  README.md
_spec/: neko_requirements.md  phase2_bevy_porting_plan.md  phase3_detailed_porting_plan.md  phase4_implementation_checklist.md  project_master_prompt.md  req_os1_file_by_file_replacement_plan.md
src/: assets.rs  audio.rs  behavior.rs  config.rs  lib.rs  main.rs  state.rs
src/platform/: cursor.rs  linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
